--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: My research Blog
+description: Notes on Python, ML DS Sciecne Math
 github_username: interkid
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "My_Research"
